testsuite/tests/builtins/list_methods/any/missing_param/test.out
Error: No value for parameter
   ╭─[ <working-dir>/script.lkql:2:7 ]
   │
 2 │ print(l.any())
   │       ───┬───  
   │          ╰───── Missing value for the "predicate" parameter
───╯
